--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+    <h1 id="text">Hola</h1>
     <div class="contenedor">
         <img style="--i:11;" src="flower (2).png" alt="" class="flor-1 size">
         <img style="--i:12;" src="flower (2).png" alt="" class="flor-2 size">
