--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+    <div class="Container">
     <h1 id="text">Hola</h1>
+</div>
     <div class="contenedor">
         <img style="--i:11;" src="flower (2).png" alt="" class="flor-1 size">
         <img style="--i:12;" src="flower (2).png" alt="" class="flor-2 size">
@@ -59,9 +61,9 @@
          <div class="heart">
 <img class="size2" src="flower (2).png" alt="">
          </div>
-            <p class="Text-Description">El dia de hoy es un dia muy especial para usted <br>Disfute de este bonito dia para usted suegrta &#x1F973;
-            <br>La influencia de usted en la vida de sus hijos siempre sera importante <br>Un gran hijo tiene a una madre que confia en ellos a todo momento
-        <br>Le deseo que se la pase super bien el dia de hoy, le hice este sitio como un detallito  <br>Le deseo muchas bendiciones para usted y su familia</p>
+            <p class="Text-Description">El dia de hoy es un dia muy especial para usted &#x1F389;<br>Disfute de este bonito dia para usted suegrta &#x1F973;
+            <br>La influencia de usted en la vida de sus hijos siempre sera importante <br> &#x2728; Un gran hijo tiene a una madre que confia en ellos a todo momento &#x2728;
+        <br>Le deseo que se la pase super bien el dia de hoy, le hice este sitio como un detallito &#x1F389; <br>Le deseo muchas bendiciones para usted y su familia</p>
         </div>
         
             <img class="Image-Flower" src="flower.png" alt="">
