--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
          <div class="heart">
 <img class="size2" src="flower (2).png" alt="">
          </div>
-            <p class="Text-Description">El dia de hoy es un dia muy especial para usted &#x1F389;<br>Disfute de este bonito dia para usted suegrta &#x1F973;
+            <p class="Text-Description">El dia de hoy es un dia muy especial para usted &#x1F389;<br>Disfute de este bonito dia para usted suegrita &#x1F973;
             <br>La influencia de usted en la vida de sus hijos siempre sera importante <br> &#x2728; Un gran hijo tiene a una madre que confia en ellos a todo momento &#x2728;
         <br>Le deseo que se la pase super bien el dia de hoy, le hice este sitio como un detallito &#x1F389; <br>Le deseo muchas bendiciones para usted y su familia</p>
         </div>
